--- a/workshops/gent/3d.md
+++ b/workshops/gent/3d.md
@@ -3,7 +3,7 @@ sdflsdlfkjsdlkfj
 
 
 
-| First Header  | Second Header | First Header  | Second Header |
-| ------------- | ------------- | ------------- | ------------- |
-| Maandag / Monday  | Gesloten / Closed	  | Gesloten / Closed	  | Gesloten / Closed	  |
-| Dinsdag / Tuesday  | Content Cell 
+|               | Voormiddag / Morning      | Namiddag / Afternoon | Avond / Evening      |
+| ------------- | -------------             | -------------        | -------------        |
+| Maandag / Monday   | Gesloten / Closed	  | Gesloten / Closed	   | Gesloten / Closed	  |
+| Dinsdag / Tuesday  | 	09:00 - 12:30       | 13:00 - 17:00      	 | Gesloten / Closed	  |
