--- a/workshops/gent/3d.md
+++ b/workshops/gent/3d.md
@@ -3,7 +3,10 @@ sdflsdlfkjsdlkfj
 
 
 
-|               | Voormiddag / Morning      | Namiddag / Afternoon | Avond / Evening      |
-| ------------- | -------------             | -------------        | -------------        |
-| Maandag / Monday   | Gesloten / Closed	  | Gesloten / Closed	   | Gesloten / Closed	  |
-| Dinsdag / Tuesday  | 	09:00 - 12:30       | 13:00 - 17:00      	 | Gesloten / Closed	  |
+|                      | Voormiddag / Morning | Namiddag / Afternoon | Avond / Evening      |
+| -------------        | -------------        | -------------        | -------------        |
+| Maandag / Monday     | Gesloten / Closed	  | Gesloten / Closed	   | Gesloten / Closed	  |
+| Dinsdag / Tuesday    | 	09:00 - 12:30       | 13:00 - 17:00      	 | Gesloten / Closed	  |
+| Woensdag / Wednesday | Gesloten / Closed	  | 13:00 - 17:00    	   | 17:30 - 21:00	      |
+| Donderdag / Thursday | 	09:00 - 12:30       | 13:00 - 17:00      	 | Gesloten / Closed	  |
+| Vrijdag / Friday     | Gesloten / Closed	  | Gesloten / Closed	   | Gesloten / Closed	  |
