--- a/workshops/gent/3d.md
+++ b/workshops/gent/3d.md
@@ -1,8 +1,6 @@
 # LUCA3d Gent
-sdflsdlfkjsdlkfj
 
-
-
+## Openingsuren / Opening hours
 |                      | Voormiddag / Morning | Namiddag / Afternoon | Avond / Evening      |
 | -------------        | -------------        | -------------        | -------------        |
 | Maandag / Monday     | Gesloten / Closed	  | Gesloten / Closed	   | Gesloten / Closed	  |
