--- a/workshops/gent/3d.md
+++ b/workshops/gent/3d.md
@@ -8,3 +8,16 @@
 | Woensdag / Wednesday | Gesloten / Closed	  | 13:00 - 17:00    	   | 17:30 - 21:00	      |
 | Donderdag / Thursday | 09:00 - 12:30        | 13:00 - 17:00      	 | Gesloten / Closed	  |
 | Vrijdag / Friday     | 09:00 - 13:00	      | Gesloten / Closed	   | Gesloten / Closed	  |
+
+## Contact
+### E-mail
+amy.beaulisch@luca-arts.be
+
+### Telefoon / Phone
+n/a
+
+### Locatie / Location:
+LUCA3d GENT
+Lokaal D114
+Alexianenplein 2
+9000 Gent
