--- a/workshops/gent/3d.md
+++ b/workshops/gent/3d.md
@@ -16,8 +16,8 @@ amy.beaulisch@luca-arts.be
 ### Telefoon / Phone
 n/a
 
-### Locatie / Location:
-LUCA3d GENT
-Lokaal D114
-Alexianenplein 2
+### Locatie / Location  
+LUCA3d GENT  
+Lokaal D114  
+Alexianenplein 2  
 9000 Gent
